refactor: mentoring room API